Introducing hibernate-module-api with access to graph-fetching